--- a/DroneMeld/MinionMeld.csproj
+++ b/DroneMeld/MinionMeld.csproj
@@ -13,20 +13,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="Components\MultiEquipDrone.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
+    <PackageReference Include="BepInEx.Analyzers" Version="1.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="BepInEx.Core" Version="5.4.21" />
     <PackageReference Include="R2API" Version="5.0.5" />
-    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.1.275-r.0" />
-    <PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.0" />
-    <PackageReference Include="UnityEngine.Modules" Version="2019.4.37" />
-    <PackageReference Include="MMHOOK.RoR2" Version="2024.8.28">
+    <PackageReference Include="R2API.CommandHelper" Version="1.0.2" />
+    <PackageReference Include="R2API.ContentManagement" Version="1.0.6" />
+    <PackageReference Include="R2API.DamageType" Version="1.1.2" />
+    <PackageReference Include="R2API.Difficulty" Version="1.1.2" />
+    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.2-r.1" />
+    <PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.2" />
+    <PackageReference Include="MMHOOK.RoR2" Version="2024.9.5">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
   </ItemGroup>
