--- a/DroneMeld/MinionMeld.csproj
+++ b/DroneMeld/MinionMeld.csproj
@@ -6,6 +6,14 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS0618</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS0618</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="libs\**" />
     <EmbeddedResource Remove="libs\**" />
@@ -19,13 +27,10 @@
     </PackageReference>
     <PackageReference Include="BepInEx.Core" Version="5.4.21" />
     <PackageReference Include="R2API" Version="5.0.5" />
-    <PackageReference Include="R2API.CommandHelper" Version="1.0.2" />
-    <PackageReference Include="R2API.ContentManagement" Version="1.0.6" />
-    <PackageReference Include="R2API.DamageType" Version="1.1.2" />
-    <PackageReference Include="R2API.Difficulty" Version="1.1.2" />
-    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.2-r.1" />
+    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.4-r.1" />
+    <PackageReference Include="RoR2BepInExPack" Version="1.7.0" />
     <PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.2" />
-    <PackageReference Include="MMHOOK.RoR2" Version="2024.9.5">
+    <PackageReference Include="MMHOOK.RoR2" Version="2024.9.18">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
   </ItemGroup>
