--- a/DroneMeld/MinionMeld.csproj
+++ b/DroneMeld/MinionMeld.csproj
@@ -2,16 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>latestMajor</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <UseWindowsForms>False</UseWindowsForms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;CS0618</NoWarn>
+    <NoWarn>1701;1702;IDE0051</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;CS0618</NoWarn>
+    <NoWarn>1701;1702;IDE0051</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,16 +22,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.0.8">
+    <PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="BepInEx.Core" Version="5.4.21" />
     <PackageReference Include="R2API" Version="5.0.5" />
-    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.4-r.1" />
+    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.*-*" />
     <PackageReference Include="RoR2BepInExPack" Version="1.7.0" />
     <PackageReference Include="Rune580.Mods.RiskOfRain2.RiskOfOptions" Version="2.8.2" />
-    <PackageReference Include="MMHOOK.RoR2" Version="2024.9.18">
+    <PackageReference Include="MMHOOK.RoR2" Version="2025.3.4">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
   </ItemGroup>
